fix trivia bg image issue on mobile

--- a/styles/partials/core/pages/_trivia.scss
+++ b/styles/partials/core/pages/_trivia.scss
@@ -9,7 +9,7 @@
     @include backgrounds.image('background/mobile/trivia-hero.png', cover, transparent, center bottom);
     z-index: -1;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     @media screen and (min-width: 768px) {
         @include backgrounds.image('background/desktop/trivia-hero.png', cover, transparent, center bottom);
