--- a/styles/partials/main.css
+++ b/styles/partials/main.css
@@ -1243,7 +1243,7 @@ li {
   background-position: center bottom;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 @media screen and (min-width: 768px) {
   .trivia-background {
